Revision history for Perl extension Canella

{{$NEXT}}

0.04 2013-07-08T00:48:55Z
    - Add sudo(\&block) DSL, so you can do stuff like
        sudo {
            run "...";
            run "...";
        }

    or even
        remote {
            sudo {
                run "...";
            }
        }

0.03 2013-07-05T05:22:53Z
    - Add call($task_name) DSL, so you can do stuff like

        task foo => sub {
            call 'bar', 'baz';
        };
        task bar => sub { ... };
        task baz => sub { ... };

0.02 2013-07-05T01:27:47Z
    - Document --mode=dump
    - Overridden parameters are now set BEFORE the deploy file is evaluated.
    - Changed prototypes for get/set DSL functions to avoid accidental
      slurping of proceeding statements

0.01 2013-07-04T12:39:15Z

    - original version
