@@ -12,7 +12,7 @@ canella - Frontend to Canella Deploy Tool
 
 =head1 SYNOPSIS
 
-    canella [-C num] [-s key=value ...] [ --mode=dump ] -c etc/deploy.pl role task [task ...]
+    canella [-C num] [-s key=value ...] [ --mode=xxxx ] -c etc/deploy.pl role task [task ...]
 
 =head1 OPTIONS
 
@@ -28,8 +28,11 @@ The default number for this option is 8
 
 =head2 C< --mode> String
 
-Changes the operation mode. Currently the only available option is "dump" mode,
-which dumps the tasks, roles, parameters, and config file name in JSON format
+Changes the operation mode. 
+
+When "dump" mode is specified, dumps the tasks, roles, parameters, and config file name in JSON format.
+
+When "help" mode is specified, shows some help message describing the specified deploy file
 
 =head2 C< -s | --set > String '=' String
 
