@@ -1,6 +1,14 @@
 Revision history for Perl extension Canella
 
 {{$NEXT}}
+    - Add doc($section, $string) DSL, which allows you to include
+      arbitrary documentation in your deploy file
+    - Add --mode=help to describe the deploy file
+    - Add task($name, %args) DSL that allows more parameters to be
+      passed in, including the description of the task, which can be
+      viewed via --mode=help
+    - Change the way the deploy file is evaluated, so that the caller
+      namespace (Canella::Context) is not polluted
 
 0.04 2013-07-08T00:48:55Z
     - Add sudo(\&block) DSL, so you can do stuff like
